ghostty config: stow for now
no need to mount in zshrc since we only work on mac for now.
need to fix this for remote though.

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,1 +1,5 @@
-/Users/ashley.zhou/.config/ghostty/config.macos
+theme = dark:Monokai Soda,light:Monokai Pro Light
+macos-titlebar-style = "transparent"
+font-family = "Iosevka Term"
+background-opacity = 0.95
+window-inherit-font-size = true
