fix zsh history issuewith
with stow-ignore and no folding
also add a read me for backlog

--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -4,3 +4,4 @@ macos-titlebar-proxy-icon = hidden
 font-family = "Iosevka Term"
 background-opacity = 0.95
 window-inherit-font-size = true
+confirm-close-surface = false
