--- a/setup/Brewfile
+++ b/setup/Brewfile
@@ -11,8 +11,11 @@ brew "bash"
 brew "neovim"
 brew "starship"
 brew "zellij"
+brew "rust"
+brew "lazygit"
+brew "ripgrep"
 
 #GUI apps
-cask "google-chrome"
+cask "arc"
 cask "alfred"
-cask "vlc"
+cask "ghostty"
