--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,15 +1,16 @@
 [user]
-        email = ashleyzhou62@gmail.com
-        name = Ashley
+	email = ashleyzhou62@gmail.com
+	name = Ashley
 [filter "lfs"]
-        clean = git-lfs clean -- %f
-        smudge = git-lfs smudge -- %f
-        process = git-lfs filter-process
-        required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
 [core]
-        editor = nvim
+	editor = nvim
+	pager = delta
 [stash]
-        showIncludeUntracked = true
+	showIncludeUntracked = true
 
 [alias]
   webdiff = "!f() { \
@@ -19,3 +20,9 @@
     git diff \"$@\" | $runner diff2html-cli -i stdin -s side -F \"$tmp\" && \
     ( command -v xdg-open >/dev/null && xdg-open \"$tmp\" ) || open \"$tmp\"; \
   }; f"
+[interactive]
+	diffFilter = delta --color-only
+[delta]
+	side-by-side = true
+	line-numbers = true
+	navigate = true
