--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -11,7 +11,7 @@ set -g pane-base-index 1
 set-window-option -g automatic-rename off
 set-option -sg escape-time 10
 
-# New pane and window settings and killing panes
+# Pane splitting and killing
 unbind '"'
 unbind %
 unbind x
@@ -54,13 +54,16 @@ bind ] swap-window -t +1\; select-window -t +1
 # New window in current path
 bind c new-window -c "#{pane_current_path}"
 
-# Sync panes toggle (type in all panes at once)
+# New session with name prompt
+bind N command-prompt -p "New session name:" "new-session -s '%%'"
+
+# Sync panes toggle
 bind S setw synchronize-panes
 
 # Clear screen and history
 bind C-l send-keys 'C-l' \; clear-history
 
-# tmux notifications
+# Notifications
 set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
@@ -70,7 +73,7 @@ set-window-option -g monitor-activity off
 #set -g mode-keys vi
 #bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
-# theming
+# Theming
 # set -g status-bg colour232
 # set -g status-fg white
 # set -g status-right '#[fg=white]%a #[fg=green]%d-%b #[fg=white]%I:%M %p#[default]'
@@ -80,21 +83,19 @@ set -g status-fg white
 set -g status-right '#[fg=white]%a #[fg=white]%d-%b #[fg=white]%I:%M %p#[default]'
 set-window-option -g window-status-current-format '#[fg=white,bold]#I:#W#[fg=dim]#F'
 
-# plugins
+# Plugins
 # set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'wfxr/tmux-power'
 
-# theme settings
+# Theme plugin settings
 set -g @tmux_power_theme 'forest'
 set -g @tmux_power_date_format '%a %d-%b'
 set -g @tmux_power_time_format '%I:%M %p'
 
-# always run tpm at the very bottom
+# Run tpm last
 run '~/.config/tmux/plugins/tpm/tpm'
 
-# copy and paste stuff
-# macOS only
-set -g mouse on
+# Copy and paste (macOS)
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
@@ -103,11 +104,7 @@ bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
 bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
 bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
 
-# To copy, left click and drag to highlight text in yellow, 
-# once you release left click yellow text will disappear and will automatically be available in clibboard
-# # Use vim keybindings in copy mode
-setw -g mode-keys vi
-# Update default binding of `Enter` to also use copy-pipe
+# Vi copy mode bindings
 unbind -T copy-mode-vi Enter
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
